# Flaude

./: .env.production  .gitignore  RELEASE.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
public/: _redirects
scripts/: mock-mcp-server.mjs
server/: .dev.vars.example  .gitignore  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  vitest.config.ts  wrangler.toml
server/migrations/: 001_sync.sql  002_projects.sql  003_artifacts.sql
server/src/: admin.ts  anthropicAdapter.ts  auth.ts  chat.ts  env.ts  imageProxy.ts  index.ts  mcpDemo.ts  mcpsSearch.ts  middleware.ts  providers.ts  skillsBundle.ts  skillsSearch.ts  sync.ts  tools.ts  usage.ts
server/test/: adminDelete.spec.ts  anthropicAdapter.spec.ts  d1Shim.ts  imageGenerate.spec.ts  mcpDemo.spec.ts  mcpsSearch.spec.ts  schema.ts  skillsBundle.spec.ts  skillsSearch.spec.ts  sync.spec.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt
src-tauri/src/: bgshell.rs  lib.rs  main.rs  mcp_stdio.rs  office.rs  pty.rs
src/components/chat/: CodeBlock.tsx  Composer.tsx  MessageActions.tsx  MessageList.tsx  ToolActivityPanel.tsx  ToolCallCard.tsx
src/components/code/: BackgroundTasksPanel.tsx  FileTree.tsx  PlanApprovalModal.tsx  Terminal.tsx  TodoPanel.tsx  WriteApprovalModal.tsx
src/components/design/: DesignCanvas.tsx
src/components/shell/: AppShell.tsx  ArtifactsPanel.tsx  ConflictToasts.tsx  DownloadDesktopButton.tsx  Sidebar.tsx  TopBar.tsx  UpdateBanner.tsx
src/config/: codeSystemPrompt.ts  designSystemPrompt.ts  mcpMarket.ts  providers.test.ts  providers.ts  skillsMarket.ts
src/hooks/: useBackgroundTasks.test.ts  useBackgroundTasks.ts  useStreamedChat.ts
src/lib/: accountExport.test.ts  accountExport.ts  accountImport.test.ts  accountImport.ts  artifacts.test.ts  artifacts.ts  builtinSkills.test.ts  builtinSkills.ts  catalogDrift.test.ts  conversationMarkdown.test.ts  conversationMarkdown.ts  conversationSearch.test.ts  conversationSearch.ts  conversationSummary.test.ts  conversationSummary.ts  designExtract.test.ts  designExtract.ts  desktopTools.test.ts  desktopTools.ts  diff.test.ts  diff.ts  fileExtraction.test.ts  fileExtraction.ts  flaudeApi.ts  globalMemory.test.ts  globalMemory.ts  hooks.test.ts  hooks.ts  mcp.test.ts  mcp.ts  mcpsSearch.test.ts  mcpsSearch.ts  planMode.test.ts  planMode.ts  planModeRuntime.test.ts  planModeRuntime.ts  pty.ts  skillsBundle.ts  skillsImport.test.ts  skillsImport.ts  (+24 more)
src/services/: providerClient.ts  wireFormat.test.ts  wireFormat.ts
src/store/: useAppStore.test.ts  useAppStore.ts
src/test/: setup.ts
src/types/: index.ts
src/views/: AdminView.test.ts  AdminView.tsx  ChatView.tsx  CodeView.tsx  DesignView.tsx  LoginView.tsx  ProjectsView.tsx  SettingsView.tsx
