[package]
name = "flaude-app"
version = "0.1.50"
description = "Flaude — a Claude-like desktop client for Chinese open-source LLMs"
edition = "2021"
rust-version = "1.77"

# The library target holds all our commands. `main.rs` is just the entry
# point that calls into the lib. This split lets us run the same code on
# mobile in the future without duplication.
[lib]
name = "flaude_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Updater plugin — checks `latest.json` on GitHub Releases and swaps the app
# binary in place. Signed with the ed25519 keypair the user generates via
# `pnpm tauri signer generate`; the public key lives in tauri.conf.json, the
# private key stays out of the repo and is passed to the CI at release time.
# See RELEASE.md for the full generate → publish → verify flow.
tauri-plugin-updater = "2"
# Process plugin — just needed for `relaunch()` after the updater swaps the
# binary. No other use; we deliberately don't expose `exit()` because the
# frontend doesn't need to force-quit the whole process for any feature.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tokio drives our async file + process commands. `rt-multi-thread` is
# already pulled by tauri but we name it for clarity.
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  # `sync` brings mpsc / Notify / async Mutex — used by bgshell.rs to wake
  # shell_read waiters and serialize stdin writes.
  "sync",
  "time",
] }
# portable-pty wraps the platform PTY APIs (ConPTY on Windows 10+, openpty on
# Unix) behind a single trait. We spawn a child shell under a PTY, read its
# output on a background thread, and stream it to the frontend via Tauri
# events — that's what turns the Terminal tab into a real interactive shell
# instead of the one-shot `shell_exec` tool the Agent uses.
portable-pty = "0.8"

# Office / PDF text extraction. Without these, fs_read_file used to dump
# 256 KB of UTF-8-lossy binary garbage when the agent tried to read a .xlsx
# / .docx / .pptx / .pdf — model would then loop trying to "extract with
# Python", blow context, and the conversation would die. With these in
# place, src/office.rs::extract_by_extension recognises the format and
# returns clean markdown that fits in the same 256 KB budget.
#
#   calamine    — pure-Rust xlsx/xls/xlsm/xlsb reader. Most popular Rust
#                 spreadsheet crate; handles formulas / dates / merged
#                 cells well enough for our "give the LLM the values"
#                 use case.
#   zip         — direct ZIP access for docx/pptx (both are zipped XML
#                 bundles). calamine has its own zip dep but the version
#                 pin doesn't always line up; vendoring our own keeps
#                 docx/pptx independent.
#   quick-xml   — pull-parser style XML reader. We only walk a handful of
#                 known tags (w:t for docx body text, a:t for pptx slide
#                 text), so SAX-style streaming is a perfect fit and
#                 avoids loading the whole tree into memory.
#   pdf-extract — text-only PDF extraction. Heavier than the rest (~2 MB
#                 in release binary) but the only mature option; pdf-rs
#                 / lopdf are lower-level and would need substantial
#                 wrapping. Encrypted / scanned PDFs return an error
#                 cleanly rather than crashing.
calamine = "0.30"
zip = "5"
quick-xml = "0.39"
pdf-extract = "0.10"

[profile.release]
# Small bundles matter — this is the whole point of Tauri over Electron.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
